# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  tests.yml
gendiff/: gendiff.py  parser.py
gendiff/scripts/: gendiff.py  run.py
tests/: test_gendiff.py  test_json.py
