[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Hexlet python project level 2"
authors = ["Kirill Chertkov <chertkov.k@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
